Add geolocation and map features

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
 # Weather API Key (Optional for Open-Meteo - used for commercial/alternative APIs)
 # Get a free key at https://open-meteo.com/ (optional) or use OpenWeatherMap/WeatherAPI
 VITE_WEATHER_API_KEY=f77e87bfddf4467c8bf182159261702
+node_modules
+dist
+.env
+.env.local
