--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "@tanstack/react-query": "^5.62.0",
     "axios": "^1.7.9",
     "framer-motion": "^12.34.1",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.469.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-leaflet": "^5.0.0",
     "recharts": "^2.15.0"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.21",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
     "@vitejs/plugin-react": "^4.3.4",
